--- a/frontend/Bitki.Blazor/Components/Layout/NavMenu.razor
+++ b/frontend/Bitki.Blazor/Components/Layout/NavMenu.razor
@@ -1,12 +1,13 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Bitki.Blazor</a>
+        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </div>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -34,6 +35,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="ucucuyagbilesik">
                 <span class="bi bi-droplet-half" aria-hidden="true"></span> Uçucu Yağ
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="herbarium/new">
+                <span class="bi bi-journal-medical" aria-hidden="true"></span> Herbaryum
             </NavLink>
         </div>
 
@@ -146,3 +152,14 @@
         </div>
     </nav>
 </div>
+
+@code {
+    private bool collapseNavMenu = true;
+
+    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+
+    private void ToggleNavMenu()
+    {
+        collapseNavMenu = !collapseNavMenu;
+    }
+}
