--- a/frontend/Bitki.Blazor/Components/Layout/NavMenu.razor
+++ b/frontend/Bitki.Blazor/Components/Layout/NavMenu.razor
@@ -38,7 +38,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="herbarium/new">
+            <NavLink class="nav-link" href="herbarium">
                 <span class="bi bi-journal-medical" aria-hidden="true"></span> Herbaryum
             </NavLink>
         </div>
